[gd_scene load_steps=6 format=3 uid="uid://7usjpwq8wfj"]

[ext_resource type="Script" path="res://Script/Turret.gd" id="1_2p658"]
[ext_resource type="Texture2D" uid="uid://dmh8mwu8xaay6" path="res://Assets/Sprites/rubble.png" id="2_4tx4l"]
[ext_resource type="Texture2D" uid="uid://b4cm213hejv4s" path="res://Assets/Sprites/back_progress_bar.png" id="3_kmq0q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nrftm"]
radius = 64.4981

[sub_resource type="CircleShape2D" id="CircleShape2D_awo7f"]
radius = 512.063

[node name="Turret" type="Node2D" groups=["Turret"]]
script = ExtResource("1_2p658")

[node name="TurretBody" type="Sprite2D" parent="."]
texture = ExtResource("2_4tx4l")

[node name="TurretBarrel" type="Sprite2D" parent="."]
texture = ExtResource("3_kmq0q")
offset = Vector2(16, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["Attackable", "Turret"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_nrftm")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_awo7f")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
